--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
+
   "name": "tala",
+
   "version": "0.1.0",
+
   "private": true,
+
   "scripts": {
+
     "dev": "next dev",
+
     "build": "next build",
+
     "start": "next start",
+
     "lint": "next lint"
+
   },
+
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+
+    "@heroicons/react": "^2.0.18",
+
+    "axios": "^1.6.2",
+
+    "next": "^12.3.4",
+
+    "query-string": "^9.0.0",
+
+    "react": "^18.2.0",
+
+    "react-copy-to-clipboard": "^5.1.0",
+
+    "react-dom": "^18.2.0",
+
+    "react-icons": "^5.2.1",
+
+    "typescript": "^5.3.2"
+
   },
+
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+
+    "@tailwindcss/typography": "^0.5.13",
+
+    "autoprefixer": "^10.4.16",
+
+    "postcss": "^8.4.32",
+
+    "tailwindcss": "^3.4.3"
+
   }
+
 }
+
