--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 
     "@heroicons/react": "^2.0.18",
 
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
 
     "formik": "^2.4.6",
 
@@ -35,6 +35,8 @@
     "react-copy-to-clipboard": "^5.1.0",
 
     "react-dom": "^18.2.0",
+
+    "react-hot-toast": "^2.4.1",
 
     "react-icons": "^5.2.1",
 
