--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 
     "next": "^12.3.4",
 
+    "next-redux-wrapper": "^8.1.0",
+
     "query-string": "^9.0.0",
 
     "react": "^18.2.0",
@@ -45,6 +47,12 @@
     "react-hot-toast": "^2.4.1",
 
     "react-icons": "^5.2.1",
+
+    "react-redux": "^9.1.2",
+
+    "redux-devtools-extension": "^2.13.9",
+
+    "redux-thunk": "^3.1.0",
 
     "typescript": "^5.3.2",
 
