--- a/package.json
+++ b/package.json
@@ -20,45 +20,47 @@
 
   "dependencies": {
 
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.9.3",
 
-    "@emotion/styled": "^11.11.5",
+    "@emotion/styled": "^11.9.3",
 
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^1.0.6",
 
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.8.4",
 
-    "axios": "^1.7.2",
+    "axios": "^0.27.2",
 
-    "formik": "^2.4.6",
+    "formik": "^2.2.9",
 
-    "next": "^12.3.4",
+    "heroicons": "^2.1.4",
 
-    "next-redux-wrapper": "^8.1.0",
+    "next": "12.1.6",
 
-    "query-string": "^9.0.0",
+    "next-redux-wrapper": "^7.0.5",
 
-    "react": "^18.2.0",
+    "query-string": "^7.1.1",
+
+    "react": "18.1.0",
 
     "react-copy-to-clipboard": "^5.1.0",
 
-    "react-dom": "^18.2.0",
+    "react-dom": "18.1.0",
 
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.2.0",
 
-    "react-icons": "^5.2.1",
+    "react-icons": "^4.12.0",
 
-    "react-redux": "^9.1.2",
+    "react-redux": "^8.0.2",
+
+    "redux": "^4.2.0",
 
     "redux-devtools-extension": "^2.13.9",
 
-    "redux-thunk": "^3.1.0",
-
-    "typescript": "^5.3.2",
+    "redux-thunk": "^2.4.1",
 
     "use-reducer-async": "^2.1.1",
 
-    "yup": "^1.4.0"
+    "yup": "^0.32.11"
 
   },
 
